<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MovieAppTheme">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:foreground="@drawable/gradient_bg"
        android:scaleType="centerCrop"
        android:src="@drawable/img_orig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:drawableStart="@drawable/img_path"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:text="@string/tv_back"
        android:textAppearance="@style/tv_BackButtonMovieDetailsStyle"
        android:textFontWeight="300"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-7sp"
        android:text="@string/tv_avengers_end_game"
        android:textAppearance="@style/tv_MovieNameMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_13plus"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/plus13_background"
        android:gravity="center"
        android:text="@string/tv_plus13"
        android:textAppearance="@style/tv_13plusMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:text="@string/tv_tagline"
        android:textAppearance="@style/tv_taglineMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <LinearLayout
        android:id="@+id/ll_review"
        android:layout_width="179dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_tagline">

        <ImageView
            android:id="@+id/iv_rating_star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_star_red">

        </ImageView>

        <ImageView
            android:id="@+id/iv_rating_star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_star_red">
        </ImageView>

        <ImageView
            android:id="@+id/iv_rating_star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_star_red">
        </ImageView>

        <ImageView
            android:id="@+id/iv_rating_star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_star_red">
        </ImageView>

        <ImageView
            android:id="@+id/iv_rating_star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_grey">
        </ImageView>

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/tv_review"
            android:textAppearance="@style/tv_reviewMovieDetailsStyle"
            android:textFontWeight="900" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:gravity="start|center_vertical"
        android:text="@string/tv_storyline"
        android:textAppearance="@style/tv_storylineMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/ll_review" />

    <TextView
        android:id="@+id/tv_storytext"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:alpha="0.75"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/tv_storytext"
        android:textAppearance="@style/tv_storytextMovieDetailsStyle"
        android:textFontWeight="300"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_storyline" />

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:gravity="start|center_vertical"
        android:text="@string/tv_cast"
        android:textAppearance="@style/tv_storylineMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_storytext" />

    <ImageView
        android:id="@+id/iv_cast_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cast_1"
        app:layout_constraintEnd_toStartOf="@+id/iv_cast_2"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

    <ImageView
        android:id="@+id/iv_cast_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cast_2"
        app:layout_constraintEnd_toStartOf="@+id/iv_cast_3"
        app:layout_constraintStart_toEndOf="@+id/iv_cast_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

    <ImageView
        android:id="@+id/iv_cast_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cast_3"
        app:layout_constraintEnd_toStartOf="@+id/iv_cast_4"
        app:layout_constraintStart_toEndOf="@+id/iv_cast_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

    <ImageView
        android:id="@+id/iv_cast_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cast_4"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/iv_cast_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

    <TextView
        android:id="@+id/tv_cast_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/tv_cast_1_text"
        android:textAppearance="@style/tv_castMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/iv_cast_1"
        app:layout_constraintStart_toStartOf="@+id/iv_cast_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_cast_1" />
    <TextView
        android:id="@+id/tv_cast_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/tv_cast_2"
        android:textAppearance="@style/tv_castMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/iv_cast_2"
        app:layout_constraintStart_toStartOf="@+id/iv_cast_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_cast_2" />
    <TextView
        android:id="@+id/tv_cast_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/tv_cast_3"
        android:textAppearance="@style/tv_castMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/iv_cast_3"
        app:layout_constraintStart_toStartOf="@+id/iv_cast_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_cast_3" />
    <TextView
        android:id="@+id/tv_cast_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/tv_cast_4"
        android:textAppearance="@style/tv_castMovieDetailsStyle"
        android:textFontWeight="900"
        app:layout_constraintEnd_toEndOf="@+id/iv_cast_4"
        app:layout_constraintStart_toStartOf="@+id/iv_cast_4"
        app:layout_constraintTop_toBottomOf="@+id/iv_cast_4" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>